crates/edgezero-macros/tests/ui/secret_bogus_kind.stderr
error: `#[secret(...)]` accepts only `store_ref` (e.g. `#[secret(store_ref)]`)
 --> tests/ui/secret_bogus_kind.rs:6:14
  |
6 |     #[secret(bogus)]
  |              ^^^^^
